# OpenIACS

./: .gitignore  README.md  package-lock.json  test.py
UI/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
UI/src/: index.html
UI/src/lib/: colors.ts  externalFeatures.ts  icons.ts  index.ts
UI/src/lib/base/: base.ts
UI/src/lib/common/: common.ts  elementListeners.ts  events.ts  formatting.ts  hash.ts  index.ts  svg.ts  trigonometry.ts  webComponent.ts
UI/src/lib/components/: button.scss  common.ts  dropDown.scss  dropDown.ts  group.scss  group.ts  inputBox.scss  inputBox.ts  lamp.scss  slider.scss  slider.ts  stepper.scss  stepper.ts  text.scss  text.ts  toggleButton.scss  toggleButton.ts  toggleSwitch.scss  toggleSwitch.ts
UI/src/lib/event/: sub.ts
UI/src/lib/instruments/: background.scss  (+41 more)
UI/src/modules/: setup.scss  setup.ts
UI/src/pages/: frontpage.ts  helpers.ts  index.scss  index.ts  pageBallastTank.ts  pageFWSW.ts  pageFuelTank.ts  pagePMS.ts  pagePMS2.ts  shared.ts
backend/: Cargo.toml
backend/src/: main.rs
backend/src/examples/: tungstenite.rs
backend/src/modules/: allocator.rs  mod.rs
backend/src/modules/registry/: host.rs  invalid.rs  link.rs  mod.rs  primitive.rs  registry.rs
backend/src/registry/: invalid.rs  link.rs  mod.rs  primitive.rs  registry.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: index.html  index.scss  index.ts  main.scss  main.ts
frontend/src/pages/: example.ts
frontend/src/yo/: index.ts
(+649 files in other folders)
